Fix spacing of nav links in screen md

--- a/app/assets/stylesheets/v2/navbar.scss
+++ b/app/assets/stylesheets/v2/navbar.scss
@@ -124,7 +124,7 @@
               color: $brand-primary;
             }
             @include media-breakpoint-down(md) {
-              font-size: 13px;
+              font-size: 14px;
             }
           }
           &.btn-signin {
